@@ -61,6 +61,7 @@ data Err = Msg String
          | Inaccessible Name
          | NonCollapsiblePostulate Name
          | AlreadyDefined Name
+         | ProofSearchFail Err
          | At FC Err
   deriving Eq
 
@@ -85,6 +86,7 @@ score :: Err -> Int
 score (CantUnify _ _ _ m _ s) = s + score m
 score (CantResolve _) = 20
 score (NoSuchVariable _) = 1000
+score (ProofSearchFail _) = 10000
 score _ = 0
 
 instance Show Err where
