@@ -21,7 +21,7 @@ import System.Directory
 import Paths_idris
 
 ibcVersion :: Word8
-ibcVersion = 26
+ibcVersion = 27
 
 data IBCFile = IBCFile { ver :: Word8,
                          sourcefile :: FilePath,
@@ -44,14 +44,15 @@ data IBCFile = IBCFile { ver :: Word8,
                          ibc_flags :: [(Name, [FnOpt])],
                          ibc_cg :: [(Name, CGInfo)],
                          ibc_defs :: [(Name, Def)],
-                         ibc_docstrings :: [(Name, String)]
+                         ibc_docstrings :: [(Name, String)],
+                         ibc_coercions :: [Name]
                        }
 {-! 
 deriving instance Binary IBCFile 
 !-}
 
 initIBC :: IBCFile
-initIBC = IBCFile ibcVersion "" [] [] [] [] [] [] [] [] [] [] [] [] [] [] [] [] [] [] [] []
+initIBC = IBCFile ibcVersion "" [] [] [] [] [] [] [] [] [] [] [] [] [] [] [] [] [] [] [] [] []
 
 loadIBC :: FilePath -> Idris ()
 loadIBC fp = do iLOG $ "Loading ibc " ++ fp
@@ -119,6 +120,7 @@ ibc i (IBCDoc n) f = case lookupCtxt Nothing n (idris_docstrings i) of
 ibc i (IBCCG n) f = case lookupCtxt Nothing n (idris_callgraph i) of
                         [v] -> return f { ibc_cg = (n,v) : ibc_cg f     }
                         _ -> fail "IBC write failed"
+ibc i (IBCCoercion n) f = return f { ibc_coercions = n : ibc_coercions f }
 ibc i (IBCAccess n a) f = return f { ibc_access = (n,a) : ibc_access f }
 ibc i (IBCFlags n a) f = return f { ibc_flags = (n,a) : ibc_flags f }
 ibc i (IBCTotal n a) f = return f { ibc_total = (n,a) : ibc_total f }
@@ -151,6 +153,7 @@ process i fn
                pTotal (ibc_total i)
                pCG (ibc_cg i)
                pDocs (ibc_docstrings i)
+               pCoercions (ibc_coercions i)
 
 timestampOlder :: FilePath -> FilePath -> IO ()
 timestampOlder src ibc = do srct <- getModificationTime src
@@ -269,6 +272,9 @@ pTotal ds = mapM_ (\ (n, a) ->
 
 pCG :: [(Name, CGInfo)] -> Idris ()
 pCG ds = mapM_ (\ (n, a) -> addToCG n a) ds
+
+pCoercions :: [Name] -> Idris ()
+pCoercions ns = mapM_ (\ n -> addCoercion n) ns
 
 ----- Generated by 'derive'
 
@@ -738,7 +744,7 @@ instance Binary Totality where
                    _ -> error "Corrupted binary data for Totality"
 
 instance Binary IBCFile where
-        put (IBCFile x1 x2 x3 x4 x5 x6 x7 x8 x9 x10 x11 x12 x13 x14 x15 x16 x17 x18 x19 x20 x21 x22)
+        put (IBCFile x1 x2 x3 x4 x5 x6 x7 x8 x9 x10 x11 x12 x13 x14 x15 x16 x17 x18 x19 x20 x21 x22 x23)
           = do put x1
                put x2
                put x3
@@ -761,6 +767,7 @@ instance Binary IBCFile where
                put x20
                put x21
                put x22
+               put x23
         get
           = do x1 <- get
                if x1 == ibcVersion then 
@@ -785,7 +792,8 @@ instance Binary IBCFile where
                     x20 <- get
                     x21 <- get
                     x22 <- get
-                    return (IBCFile x1 x2 x3 x4 x5 x6 x7 x8 x9 x10 x11 x12 x13 x14 x15 x16 x17 x18 x19 x20 x21 x22)
+                    x23 <- get
+                    return (IBCFile x1 x2 x3 x4 x5 x6 x7 x8 x9 x10 x11 x12 x13 x14 x15 x16 x17 x18 x19 x20 x21 x22 x23)
                   else return (initIBC { ver = x1 })
  
 instance Binary FnOpt where
@@ -799,6 +807,7 @@ instance Binary FnOpt where
                                    put x
                 Coinductive -> putWord8 5
                 PartialFn -> putWord8 6
+                Implicit -> putWord8 7
         get
           = do i <- getWord8
                case i of
@@ -810,6 +819,7 @@ instance Binary FnOpt where
                            return (Specialise x)
                    5 -> return Coinductive
                    6 -> return PartialFn
+                   7 -> return Implicit
                    _ -> error "Corrupted binary data for FnOpt"
 
 instance Binary Fixity where
