@@ -3,6 +3,7 @@ New in 0.9.7:
 
 User visible changes:
 
+* 'implicit' keyword, for implicit type conversion
 * Primitives for 8,16,32 and 64 bit integers
 
 Internal changes:
